feat: search type
